--- a/package.json
+++ b/package.json
@@ -8,12 +8,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@svgr/webpack": "^6.2.1",
+    "@tailwindcss/nesting": "^0.0.0-insiders.565cd3e",
+    "framer-motion": "^6.2.6",
+    "locomotive-scroll": "^4.1.4",
     "next": "12.0.10",
+    "next-seo": "^5.1.0",
+    "postcss-import": "^14.0.2",
+    "preact": "^10.6.5",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-locomotive-scroll": "^0.2.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.2",
     "eslint": "8.9.0",
-    "eslint-config-next": "12.0.10"
+    "eslint-config-next": "12.0.10",
+    "postcss": "^8.4.6",
+    "tailwindcss": "^3.0.22"
   }
 }
